cmake_minimum_required(VERSION 3.10)
project(OpenCvExemple)
set(OpenCV_FOUND 1)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(Calibration stereo_calib.cpp)
target_link_libraries(Calibration ${OpenCV_LIBS})
add_executable(ImagesTaker imagesTaker.cpp)
target_link_libraries(ImagesTaker ${OpenCV_LIBS})
add_executable(DepthDetect depthTest.cpp)
target_link_libraries(DepthDetect ${OpenCV_LIBS})